--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
 		"postcss": "^8.4.24",
 		"rome": "^12.1.3",
 		"tailwindcss": "^3.3.2",
-		"typescript": "^4.9.5",
-		"vite": "^4.1.1",
-		"vite-plugin-solid": "^2.5.0"
+		"typescript": "^5.1.3",
+		"vite": "^4.3.9",
+		"vite-plugin-solid": "^2.7.0"
 	},
 	"dependencies": {
-		"solid-js": "^1.6.10"
+		"@solid-primitives/active-element": "^2.0.15",
+		"@solid-primitives/autofocus": "^0.0.107",
+		"@solid-primitives/keyboard": "^1.2.3",
+		"solid-js": "^1.7.6"
 	}
 }
