--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
 		"resolveJsonModule": true,
+		"skipLibCheck": true,
 		"jsx": "preserve",
 		"jsxImportSource": "solid-js",
 		"types": [
@@ -15,5 +16,15 @@
 		],
 		"noEmit": true,
 		"isolatedModules": true
-	}
+	},
+	"include": [
+		"src/**/*.ts",
+		"src/**/*.tsx",
+		"src/**/*.js",
+		"src/**/*.jsx",
+		"src/**/*.json"
+	],
+	"exclude": [
+		"node_modules"
+	]
 }
