--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "panko",
+	"name": "train-of-tabs",
 	"type": "module",
 	"version": "0.1.0",
 	"description": "A browser extension for keeping track where that tab came from",
@@ -13,18 +13,18 @@
 	"devDependencies": {
 		"@crxjs/vite-plugin": "2.0.0-beta.17",
 		"@types/chrome": "^0.0.237",
-		"autoprefixer": "^10.4.14",
-		"postcss": "^8.4.24",
+		"autoprefixer": "^10.4.17",
+		"postcss": "^8.4.33",
 		"rome": "^12.1.3",
-		"tailwindcss": "^3.3.2",
-		"typescript": "^5.1.3",
-		"vite": "^4.3.9",
-		"vite-plugin-solid": "^2.7.0"
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.3.3",
+		"vite": "^5.0.12",
+		"vite-plugin-solid": "^2.9.1"
 	},
 	"dependencies": {
-		"@solid-primitives/active-element": "^2.0.15",
+		"@solid-primitives/active-element": "^2.0.18",
 		"@solid-primitives/autofocus": "^0.0.107",
-		"@solid-primitives/keyboard": "^1.2.3",
-		"solid-js": "^1.7.6"
+		"@solid-primitives/keyboard": "^1.2.6",
+		"solid-js": "^1.8.12"
 	}
 }
