--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"@crxjs/vite-plugin": "2.0.0-beta.17",
 		"@types/chrome": "^0.0.237",
 		"autoprefixer": "^10.4.17",
+		"@biomejs/biome": "nightly",
 		"postcss": "^8.4.33",
-		"rome": "^12.1.3",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3",
 		"vite": "^5.0.12",
